# routes/index.js
@@ -2,8 +2,7 @@ const router = require('express').Router();
 
 //router.get('/' , (req, res) => { res.send('Hello World');});
 const passport = require('passport');
-router.use('/employees', require('./employees'));
-router.use('/department', require('./departments'));
+router.use('/events', require('./events'));
 
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
